# CPUSimulator

./: CMakeLists.txt  CPU.cpp  CPU.h  CPUSimulator  Data.txt  Makefile  Memory.cpp  Memory.h  Memory.txt  README.md  Utils.h  main.cpp  makefile
Assembly Programs/: Data.txt  Factorial.tfs  GuessTheNumber.tfs  Memory.tfs  PowerOf.tfs
Cache/: Cache.cpp  Cache.h  CacheData.cpp  CacheData.h
